// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display show page 1`] = `
<div
  className="display-document-viewer"
  id="document-viewer"
>
  <Page
    lines={
      Object {
        "currPage": 1,
        "selected": Set {},
        "words": Array [
          Array [
            "Die ",
            "Welt ",
          ],
          Array [
            "ist ",
            "meine ",
            "Vorstellung",
          ],
        ],
      }
    }
    selectWord={[MockFunction]}
  />
  <Navigator
    cursor={[MockFunction]}
    jumpToPage={[MockFunction]}
    results={
      Object {
        "currPage": 1,
        "selected": Set {},
        "words": Array [
          Array [
            "Die ",
            "Welt ",
          ],
          Array [
            "ist ",
            "meine ",
            "Vorstellung",
          ],
        ],
      }
    }
    viewer="document-viewer"
  />
</div>
`;

exports[`DocumentViewer use viewer 1`] = `
<Display
  cursor={[MockFunction]}
  jumpToPage={[MockFunction]}
  lines={
    Object {
      "currPage": 1,
      "selected": Set {},
      "words": Array [
        Array [
          "Die ",
          "Welt ",
        ],
        Array [
          "ist ",
          "meine ",
          "Vorstellung",
        ],
      ],
    }
  }
  selectWord={[MockFunction]}
/>
`;

exports[`DocumentViewer viewer inactive 1`] = `
<div
  id="document-viewer"
/>
`;
